--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -1,61 +1,62 @@
-$noise-bg: image-url('noise.png') top left !default;
-$img-border: inline-image('dotted-border.png') !default;
+$noise-bg: image-url('back_pattern.png') top left !default;
+$transparent-noise-bg: image-url('noise.png') top left !default;
+$img-border: inline-image('dotted-border.png');
 
 // Main Link Colors
-$link-color: lighten(#165b94, 3) !default;
+$link-color: #c4a549 !default;
 $link-color-hover: adjust-color($link-color, $lightness: 10, $saturation: 25) !default;
-$link-color-visited: adjust-color($link-color, $hue: 80, $lightness: -4) !default;
+$link-color-visited: adjust-color($link-color, $hue: 50, $lightness: -4) !default;
 $link-color-active: adjust-color($link-color-hover, $lightness: -15) !default;
 
 // Main Section Colors
-$main-bg: #f8f8f8 !default;
-$page-bg: #252525 !default;
-$article-border: #eeeeee !default;
+$main-bg: #fff !default;
+$page-bg: #fff !default;
+$article-border: #cbcbb6 !default;
 
-$header-bg: #333 !default;
-$header-border: lighten($header-bg, 15) !default;
-$title-color: #f2f2f2 !default;
-$subtitle-color: #aaa !default;
+$header-bg: $noise-bg;
+$header-border: #333;
+$title-color: #888 !default;
+$subtitle-color: #888 !default;
 
-$text-color: #222 !default;
-$text-color-light: #aaa !default;
-$type-border: #ddd !default;
+$text-color: #555 !default;
+$text-color-light: #555 !default;
+$type-border: #555 !default;
 
 /* Navigation */
-$nav-bg: #ccc !default;
-$nav-bg-front: image-url('noise.png') !default;
-$nav-bg-back: linear-gradient(lighten($nav-bg, 8), $nav-bg, darken($nav-bg, 11)) !default;
-$nav-color: darken($nav-bg, 38) !default;
-$nav-color-hover: darken($nav-color, 25) !default;
-$nav-placeholder: desaturate(darken($nav-bg, 10), 15) !default;
+$nav-bg: #333 !default;
+$nav-bg-front: none;
+$nav-bg-back: none;
+$nav-color: #ccc;
+$nav-color-hover: darken($nav-color, 15) !default;
+$nav-placeholder: desaturate(lighten($nav-bg, 10), 15) !default;
 $nav-border: darken($nav-bg, 10) !default;
-$nav-border-top: lighten($nav-bg, 15) !default;
-$nav-border-bottom: darken($nav-bg, 25) !default;
-$nav-border-left: darken($nav-bg, 11) !default;
-$nav-border-right: lighten($nav-bg, 7) !default;
+$nav-border-top: #ccc;
+$nav-border-bottom: #ccc;
+$nav-border-left: none;
+$nav-border-right: none;
 
 /* Sidebar colors */
-$sidebar-bg: #f2f2f2 !default;
+$sidebar-bg: #fff !default;
 $sidebar-link-color: $link-color !default;
 $sidebar-link-color-hover: $link-color-hover !default;
 $sidebar-link-color-active: $link-color-active !default;
-$sidebar-color: change-color(mix($text-color, $sidebar-bg, 80), $hue: hue($sidebar-bg), $saturation: saturation($sidebar-bg)/2) !default;
-$sidebar-border: desaturate(darken($sidebar-bg, 7), 10) !default;
+$sidebar-color: $text-color !default;
+$sidebar-border: #eee;
 $sidebar-border-hover: darken($sidebar-bg, 7) !default;
 $sidebar-link-color-subdued: lighten($sidebar-color, 20) !default;
 $sidebar-link-color-subdued-hover: $sidebar-link-color-hover !default;
+$twitter-status-link: lighten($sidebar-link-color-subdued, 15) !default;
 
-$footer-color: #888 !default;
-$footer-bg: #ccc !default;
-$footer-bg-front: image-url('noise.png') !default;
-$footer-bg-back: linear-gradient(lighten($footer-bg, 8), $footer-bg, darken($footer-bg, 11)) !default;
-$footer-color: darken($footer-bg, 38) !default;
+$footer-color: #555 !default;
+$footer-bg: #625266 !default;
+$footer-bg-front: none;
+$footer-bg-back: none;
 $footer-color-hover: darken($footer-color, 10) !default;
-$footer-border-top: lighten($footer-bg, 15) !default;
-$footer-border-bottom: darken($footer-bg, 15) !default;
-$footer-link-color: darken($footer-bg, 38) !default;
-$footer-link-color-hover: darken($footer-color, 25) !default;
-$page-border-bottom: darken($footer-bg, 5) !default;
+$footer-border-top: #fff;
+$footer-border-bottom: #fff;
+$footer-link-color: darken($footer-bg, 30) !default;
+$footer-link-color-hover: darken($footer-color, 35) !default;
+$page-border-bottom: #fff !default;
 
 
 /* Core theme application */
@@ -71,14 +72,14 @@ a {
 }
 
 html {
-  background: $page-bg image-url('line-tile.png') top left;
+  background: $page-bg $noise-bg;
 }
-body {
+#body {
   > div {
-    background: $sidebar-bg $noise-bg;
+    background: $sidebar-bg;
     border-bottom: 1px solid $page-border-bottom;
     > div {
-      background: $main-bg $noise-bg;
+      background: $main-bg;
       border-right: 1px solid $sidebar-border;
     }
   }
